README/Website flufftext changed

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         tools from a protein sequence or a PDB file.
                         <br><br>
                         <ol>
-                            <li>Select a residue, a residue range, and residue types to
+                            <li>Select residues and residue types to
                         mutate to.</li>
 
                             <li>If you are using a PDB file, the chain is required.</li>
