README/Website flufftext changed again to correct mistakes

--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
                         tools from a protein sequence or a PDB file.
                         <br><br>
                         <ol>
-                            <li>Select residues and residue types to
-                        mutate to.</li>
+                            <li>Click the amino acid buttons to toggle on/off substitutions with this amino acid</li>
 
-                            <li>If you are using a PDB file, the chain is required.</li>
+                            <li>Specify residue numbers, or leave blank to do all residues in the protein/chain.</li>
 
                             <li>Enter sequence or upload PDB file.</li>
+                            
+                            <li>If you are using a PDB file, the chain is required.</li>
 
                             <li>Pick the tool/website you want to generate input for.</li>
 
